Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Order account by its code and name
* Add optional debit type on account
* Show the move resulting from the GroupLines wizard
* Allow periods to end on any day of the month
* Use a wizard to select parameters when creating periods
* Modularize code in GroupLines wizard

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Add default customer and supplier tax rule
* Update sequence name in renew fiscal year
* Make tax required on tax line
* Use today as default date when inside the period

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add group lines wizard
* Manage delegate reconciliation
* Remove starting wildcard when searching on codes and numbers
* Remove display balance
* Merge account kind and account type
* Add origin on move line
* Base journal cash report on account kind receivable and payable

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Set party required on account payable and receivable of party
* Add writeoff method
* Remove default account from journal
* Add replacement account
* Add period on account and tax code
* Add template override mechanism to tax rules and tax rule lines
* Remove support for Python 2.7
* Remove journal type

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Use tax code line for tax reporting
* Use custom clause for Tax Code sum
* Add check to modify Tax Lines
* Check receivable/payable to erase party
* Open general ledger accounts from Income Statement relate
* Add warning when creating a second chart of account
* Manage chart update per record
* Allow to reconcile many group of lines with Line.reconcile

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to keep original taxes when applying a tax rule
* Add legal notice on taxes
* Ease creation of new fiscalyear
* Drop required on party payable and receivable accounts