@@ -1,3 +1,5 @@
+* Test for lines to reconcile before showing the next account
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Order account by its code and name
